Fixed gear-border overlap

--- a/public/labs/a4/Challenge/index.css
+++ b/public/labs/a4/Challenge/index.css
@@ -72,8 +72,7 @@ body {
 
 .fa-gear {
     color: white;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
 }
 
 .col-7 > .border {
